--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -468,75 +468,30 @@ distribution %<>% mutate(dwc_source = source)
 
 ## Species profile extension
 
-In this extension we will express broad habitat characteristics of the species (e.g. `isTerrestrial`) from `realm`.
+In this extension we will express broad habitat characteristics of the species (e.g. `isTerrestrial`).
 
-Create a dataframe with unique taxa only (ignoring multiple distribution rows):
-
-```{r}
-species_profile <- input_data %>% distinct(taxon_id, .keep_all = TRUE)
-```
-
-Only keep records for which `realm` is not empty:
-
-```{r}
-species_profile %<>% filter(!is.na(realm))
-```
-
-Inspect values:
-
-```{r}
-species_profile %>%
-  group_by(realm) %>%
-  count()
-```
+Create a dataframe with unique taxa only (ignoring multiple distribution rows).
+Only keep records for which `terrestrial`, `marine` and `freshwater` is not empty.
 
 Map the data to [Species Profile](http://rs.gbif.org/extension/gbif/1.0/speciesprofile.xml).
 
-### taxonID
-
 ```{r}
-species_profile %<>% mutate(dwc_taxonID = taxon_id)
-```
-
-### isMarine
-
-```{r}
-species_profile %<>% mutate(dwc_isMarine = case_when(
-  realm == "freshwater | marine" ~ "TRUE",
-  realm == "estuarine" ~ "TRUE",
-  TRUE ~ "FALSE"
-)) 
-```
-
-### isFreshwater
-
-```{r}
-species_profile %<>% mutate(dwc_isFreshwater = case_when(
-  realm == "freshwater" ~ "TRUE",
-  realm == "freshwater | marine" ~ "TRUE",
-  realm == "terrestrial | freshwater" ~ "TRUE",
-  realm == "estuarine" ~ "TRUE",
-  TRUE ~ "FALSE"
-)) 
-```
-
-### isTerrestrial
-
-```{r}
-species_profile %<>% mutate(dwc_isTerrestrial = case_when(
-  realm == "terrestrial" ~ "TRUE",
-  realm == "terrestrial | freshwater" ~ "TRUE",
-  TRUE ~ "FALSE"
-))
-```
-
-Show mapped values:
-
-```{r}
-species_profile %>%
-  select(realm, dwc_isMarine, dwc_isFreshwater, dwc_isTerrestrial) %>%
-  group_by_all() %>%
-  summarize(records = n())
+species_profile <-
+  input_data %>%
+  distinct(taxon_id, .keep_all = TRUE) %>% 
+  filter(
+    !is.na(terrestrial) |
+      !is.na(marine) |
+      !is.na(freshwater)
+  ) %>% 
+  mutate(
+    .keep = "none",
+    taxonID = taxon_id,
+    isMarine = marine,
+    isFreshwater = freshwater,
+    isTerrestrial = terrestrial
+  ) %>% 
+  arrange(taxonID)
 ```
 
 ## Description extension
@@ -666,7 +621,7 @@ Separate values on `|` in a maximum of 2 columns:
 
 ```{r}
 pathway %<>% separate(
-  introduction_pathway,
+  old_introduction_pathway,
   into = paste0("range_", c(1:2)),
   sep = " \\| ",
   extra = "drop"
@@ -825,7 +780,6 @@ Only keep the Darwin Core columns:
 taxon %<>% select(starts_with("dwc_"))
 literature_references %<>% select(starts_with("dwc_"))
 distribution %<>% select(starts_with("dwc_"))
-species_profile %<>% select(starts_with("dwc_"))
 description %<>% select(starts_with("dwc_"))
 ```
 
@@ -835,7 +789,6 @@ Drop the `dwc_` prefix:
 colnames(taxon) <- str_remove(colnames(taxon), "dwc_")
 colnames(literature_references) <- str_remove(colnames(literature_references), "dwc_")
 colnames(distribution) <- str_remove(colnames(distribution), "dwc_")
-colnames(species_profile) <- str_remove(colnames(species_profile), "dwc_")
 colnames(description) <- str_remove(colnames(description), "dwc_")
 ```
 
@@ -851,7 +804,6 @@ Sort on `taxonID` (to maintain some consistency between updates of the dataset):
 taxon %<>% arrange(taxonID)
 literature_references %<>% arrange(taxonID)
 distribution %<>% arrange(taxonID)
-species_profile %<>% arrange(taxonID)
 description %<>% arrange(taxonID)
 ```
 
