--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -43,7 +43,7 @@ raw_data <- read_csv("https://docs.google.com/spreadsheets/d/e/2PACX-1vTl8IEk2fP
 Copy the source data to the repository to keep track of changes:
 
 ```{r}
-write_csv(input_data, here("data", "raw", "ad_hoc_checklist_dump.csv"), na = "")
+write_csv(raw_data, here("data", "raw", "ad_hoc_checklist_dump.csv"), na = "")
 ```
 
 Preview data: 
@@ -212,7 +212,6 @@ Save to CSV:
 
 ```{r}
 write_csv(taxon, here("data", "processed", "taxon.csv"), na = "")
-write_csv(literature_references, here("data", "processed", "references.csv"), na = "")
 write_csv(distribution, here("data", "processed", "distribution.csv"), na = "")
 write_csv(species_profile, here("data", "processed", "speciesprofile.csv"), na = "")
 write_csv(description, here("data", "processed", "description.csv"), na = "")
