--- a/src/dwc_mapping.Rmd
+++ b/src/dwc_mapping.Rmd
@@ -139,7 +139,7 @@ distribution <-
         location == "Brussels" ~ "Brussels-Capital Region"),
       countryCode = .data$country_code,
       occurrenceStatus = .data$occurrence_status,
-      establishmentMeans = "introduced",
+      establishmentMeans = establishment_means,
       degreeOfEstablishment = .data$degree_of_establishment,
       first_observation_clean = 
         str_remove_all(.data$date_first_observation, ">"),
